Add array of CVSSes to the PackageVulnerabilityScan
This provides a way for us to report all CVSS scores for a vulnerability
instead of just the CVSS v3 score.
