# api/server/models/package_vulnerability_scan.go
@@ -7,6 +7,7 @@ package models
 
 import (
 	"context"
+	"strconv"
 
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
@@ -20,6 +21,9 @@ type PackageVulnerabilityScan struct {
 
 	// cvss
 	Cvss *CVSS `json:"cvss,omitempty"`
+
+	// cvsses
+	Cvsses []*CVSSItem `json:"cvsses"`
 
 	// description
 	Description string `json:"description,omitempty"`
@@ -54,6 +58,10 @@ func (m *PackageVulnerabilityScan) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
+	if err := m.validateCvsses(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validatePackage(formats); err != nil {
 		res = append(res, err)
 	}
@@ -80,6 +88,30 @@ func (m *PackageVulnerabilityScan) validateCvss(formats strfmt.Registry) error {
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *PackageVulnerabilityScan) validateCvsses(formats strfmt.Registry) error {
+	if swag.IsZero(m.Cvsses) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Cvsses); i++ {
+		if swag.IsZero(m.Cvsses[i]) { // not required
+			continue
+		}
+
+		if m.Cvsses[i] != nil {
+			if err := m.Cvsses[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("cvsses" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
@@ -125,6 +157,10 @@ func (m *PackageVulnerabilityScan) ContextValidate(ctx context.Context, formats 
 		res = append(res, err)
 	}
 
+	if err := m.contextValidateCvsses(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.contextValidatePackage(ctx, formats); err != nil {
 		res = append(res, err)
 	}
@@ -148,6 +184,24 @@ func (m *PackageVulnerabilityScan) contextValidateCvss(ctx context.Context, form
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *PackageVulnerabilityScan) contextValidateCvsses(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Cvsses); i++ {
+
+		if m.Cvsses[i] != nil {
+			if err := m.Cvsses[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("cvsses" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
