# api/server/models/vulnerability_ex.go
@@ -7,6 +7,7 @@ package models
 
 import (
 	"context"
+	"strconv"
 
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
@@ -21,6 +22,9 @@ type VulnerabilityEx struct {
 
 	// cvss
 	Cvss *CVSS `json:"cvss,omitempty"`
+
+	// cvsses
+	Cvsses []*CVSSItem `json:"cvsses"`
 
 	// description
 	Description string `json:"description,omitempty"`
@@ -41,6 +45,10 @@ func (m *VulnerabilityEx) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	if err := m.validateCvss(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateCvsses(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -70,6 +78,30 @@ func (m *VulnerabilityEx) validateCvss(formats strfmt.Registry) error {
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *VulnerabilityEx) validateCvsses(formats strfmt.Registry) error {
+	if swag.IsZero(m.Cvsses) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Cvsses); i++ {
+		if swag.IsZero(m.Cvsses[i]) { // not required
+			continue
+		}
+
+		if m.Cvsses[i] != nil {
+			if err := m.Cvsses[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("cvsses" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
@@ -112,6 +144,10 @@ func (m *VulnerabilityEx) ContextValidate(ctx context.Context, formats strfmt.Re
 		res = append(res, err)
 	}
 
+	if err := m.contextValidateCvsses(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.contextValidateVulnerability(ctx, formats); err != nil {
 		res = append(res, err)
 	}
@@ -131,6 +167,24 @@ func (m *VulnerabilityEx) contextValidateCvss(ctx context.Context, formats strfm
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *VulnerabilityEx) contextValidateCvsses(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Cvsses); i++ {
+
+		if m.Cvsses[i] != nil {
+			if err := m.Cvsses[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("cvsses" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
